Spacing fix

--- a/src/styles/simple-table.css
+++ b/src/styles/simple-table.css
@@ -1057,13 +1057,24 @@
   justify-content: flex-end;
   text-align: right;
 }
+.st-header-label.left-aligned {
+  justify-content: flex-start;
+  text-align: left;
+}
+.st-header-label.center-aligned {
+  justify-content: center;
+  text-align: center;
+}
 .st-header-label,
 .st-cell-content {
   flex: 1;
   color: var(--st-cell-color);
+  display: flex;
+  align-items: center;
+
+  padding-left: var(--st-cell-padding);
 
   user-select: none;
-  padding: var(--st-cell-padding);
   text-align: left;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -1071,6 +1082,25 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+}
+
+.st-header-label {
+  padding-right: var(--st-cell-padding);
+}
+.st-cell-content {
+  padding-right: calc(var(--st-cell-padding) + var(--st-spacing-small) + var(--st-resize-handle-width));
+}
+.st-cell-content.right-aligned {
+  justify-content: flex-end;
+  text-align: right;
+}
+.st-cell-content.left-aligned {
+  justify-content: flex-start;
+  text-align: left;
+}
+.st-cell-content.center-aligned {
+  justify-content: center;
+  text-align: center;
 }
 .st-cell {
   position: relative;
